# MailVault-Collection-Profiler

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  NOTICE  README.md  README_FA.md  SECURITY.md  SOURCE_PACKAGE_CORRECTIONS.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  compatibility_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  FormatsView.tsx  api.ts  main.tsx  styles.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
crates/profiler-adapter-mailvault/: Cargo.toml
crates/profiler-adapter-mailvault/src/: contract.rs  file_stat.rs  inventory.rs  layout.rs  lib.rs  preflight.rs  snapshot.rs
crates/profiler-adapter-mailvault/tests/: preflight.rs
crates/profiler-core/: Cargo.toml
crates/profiler-core/src/: adapter.rs  error.rs  explorer.rs  file_stat.rs  format.rs  inventory.rs  lib.rs  progress.rs  run.rs  source.rs  workspace.rs
crates/profiler-engine/: Cargo.toml
crates/profiler-engine/src/: file_stat.rs  format.rs  lib.rs  workspace.rs
crates/profiler-engine/tests/: profile_pipeline.rs
crates/profiler-format-siegfried/: Cargo.toml
crates/profiler-format-siegfried/src/: lib.rs
crates/profiler-storage-sqlite/: Cargo.toml
crates/profiler-storage-sqlite/migrations/: 0001_initial.sql  0002_inventory_contract.sql  0003_file_stat.sql  0004_explorer_indexes.sql  0005_workspace_reopen_reviews.sql  0006_exact_format_identification.sql
crates/profiler-storage-sqlite/src/: explorer.rs  format.rs  lib.rs  review.rs  workspace.rs
docs/: ADAPTER_CONTRACT.md  ARCHITECTURE.md  CLI_REFERENCE.md  DEVELOPMENT.md  EVIDENCE_OUTPUTS.md  FAQ.md  FINDINGS_REVIEW.md  FORMAT_IDENTIFICATION.md  FORMAT_IDENTIFICATION_RUNBOOK.md  GETTING_STARTED.md  GITHUB_PUBLISHING_GUIDE_FA.md  GUI_GUIDE.md  IMPLEMENTATION_STATUS.md  INDEX.md  INSTALLATION_WINDOWS.md  INVENTORY_EXPLORER.md  PRIVACY.md  REAL_ARCHIVE_BASELINE.md  RELEASE_PROCESS.md  REPOSITORY_RELEASE_HANDOFF_FA.md  ROADMAP.md  SCREENSHOTS.md  SECURITY_MODEL.md  TECHNICAL_SPEC_0.1.1.md  TROUBLESHOOTING.md  VALIDATION_0.1.0-alpha.2.md  VALIDATION_0.1.0-alpha.3.md  VALIDATION_0.1.0-alpha.4.md  WORKSPACE_FORMAT.md
docs/releases/: v0.1.0-alpha.2.md  v0.1.0-alpha.3.md  v0.1.0-alpha.4.md
scripts/: check-docs.cjs  check-release-config.cjs  check-rust-syntax.cjs  check-tag-version.cjs  configure-github-labels.ps1  generate-release-checksums.ps1  install-siegfried.ps1  quality.ps1  quality.sh  run-real-archive-profile.ps1  verify-siegfried.ps1
tools/siegfried/windows-x86_64/: README.md
