[workspace]
members = [
  "apps/cli",
  "apps/desktop/src-tauri",
  "crates/profiler-adapter-mailvault",
  "crates/profiler-core",
  "crates/profiler-engine",
  "crates/profiler-storage-sqlite",
]
resolver = "3"

[workspace.package]
version = "0.1.0-alpha.3"
edition = "2024"
rust-version = "1.97.1"
authors = ["FireXCore"]
license = "Apache-2.0"
repository = "https://github.com/FireXCore/mailvault-collection-profiler"
homepage = "https://github.com/FireXCore/mailvault-collection-profiler"
description = "Local-first, evidence-preserving collection profiler for MailVault archives."

[workspace.dependencies]
camino = { version = "1", features = ["serde1"] }
clap = { version = "4.6.3", features = ["derive"] }
fs2 = "0.4"
hex = "0.4"
rayon = "1"
rusqlite = { version = "0.40", features = ["backup", "bundled", "modern_sqlite", "serde_json", "time", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.151"
sha2 = "0.11"
tempfile = "3"
thiserror = "2"
time = { version = "0.3.54", features = ["formatting", "parsing", "serde", "serde-well-known"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
unicode-normalization = "0.1"
uuid = { version = "1", features = ["serde", "v5", "v7"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
