[package]
name = "profiler-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Application orchestration for MailVault Collection Profiler."

[dependencies]
fs2.workspace = true
time.workspace = true
hex.workspace = true
profiler-adapter-mailvault = { path = "../profiler-adapter-mailvault" }
profiler-core = { path = "../profiler-core" }
profiler-storage-sqlite = { path = "../profiler-storage-sqlite" }
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
uuid.workspace = true

[lints]
workspace = true

[dev-dependencies]
rusqlite.workspace = true
tempfile.workspace = true
