[package]
name = "profiler-format-siegfried"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Pinned Siegfried/PRONOM exact-format sidecar integration for MailVault Collection Profiler."

[dependencies]
hex.workspace = true
profiler-core = { path = "../profiler-core" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
time.workspace = true
tracing.workspace = true

[lints]
workspace = true
