[package]
name = "profiler-storage-sqlite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "SQLite metadata store for MailVault Collection Profiler."

[dependencies]
profiler-core = { path = "../profiler-core" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
unicode-normalization.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
